Corrigindo erro AnsibleError: template error while templating string: Missing end of comment tag. String

--- a/templates/elastizabbix.j2
+++ b/templates/elastizabbix.j2
@@ -1,3 +1,4 @@
+{% raw %}
 #! /usr/bin/python
 import os
 import sys
@@ -78,3 +79,4 @@ if __name__ == '__main__':
             print ''
         else:
             print stat
+  {% endraw %}
